--- a/03_variables_js.html
+++ b/03_variables_js.html
@@ -39,6 +39,22 @@
         // var hello = 1;
         // var Hello = 2; These are 2 variables.But we don't start a variable with capital letters.
 
+        // DATA TYPES
+
+        // # Primitive Data Types
+        //     1) Number
+        //     2) String
+        //     3) Boolean
+        //     4) null
+        //     5) undefined
+        //     5) Symbol
+        //     5) BigInt
+        //
+        // # Object Data Types
+        //     6) Object
+        //     7) Array
+        //     8) Function
+
     </script>
 </body>
 </html>
