add dynamic and loosely type

--- a/04_data_types_js.html
+++ b/04_data_types_js.html
@@ -145,6 +145,9 @@
             // We can assign vbalues of different tpe to the same variable without expicitly declaring its type.
             // Python is also a loosely typed language.
 
+            // Javascript is a dynamically typed language,which means that variable types are determined at runtime.
+            // Variables can change their type during the execution of the program.
+
     </script>
 </body>
 </html>
