--- a/03_variables_js.html
+++ b/03_variables_js.html
@@ -7,6 +7,29 @@
 <body>
     <script>
 
+        // 1. Declaring Variables in JavaScript
+
+        // 1.1 var (Function-scoped or Globally scoped)
+
+            // var was the original way to declare variables in JavaScript, but it has some issues with scoping that have led to the introduction of let and const.
+            // Variables declared with var are function-scoped (if inside a function) or globally scoped (if declared outside a function).
+            // They are also hoisted, meaning the declaration is moved to the top of its scope.
+
+
+        // 1.2 let (Block-scoped)
+
+            // let was introduced in ES6 (ECMAScript 2015) and provides block-scoping.
+            //     This means that the variable is only accessible within the block (enclosed by {}) where it is defined.
+            //     Variables declared with let are not hoisted like var and are safer to use in modern JavaScript.
+
+        // 1.3 const (Block-scoped, but read-only)
+
+            // const is similar to let in terms of block scoping, but it is used for variables that should not be reassigned after their initial assignment.
+            // It creates a constant reference to a value.
+            // While the reference to the variable cannot be changed, the content of the variable (if it's an object or array) can still be modified.
+
+        //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
         // var x = 5;
         // var = variable declaration(Not variable type)
         // x = variable name;
@@ -21,9 +44,9 @@
         //     1) Non-block scope variable types
                     // Able to access anywhere in the file.Don't care about block scope.
                     // ex = var
-            // 2) block scope variable types
-        //         Access only limited to block-scope
-        //         ex = const,let
+        //      2) block scope variable types
+                    //Access only limited to block-scope
+                    //ex = const,let
 
         // var x = 10;
         // var y = "Hello";
@@ -38,6 +61,9 @@
 
         // var hello = 1;
         // var Hello = 2; These are 2 variables.But we don't start a variable with capital letters.
+
+        // In JavaScript, variables are used to store data that can be referenced and manipulated throughout the program.
+        // You can declare variables using different keywords, and each type of declaration has its own scope and behavior.
 
     </script>
 </body>
