special dataTypes note

--- a/04_data_types_js.html
+++ b/04_data_types_js.html
@@ -181,6 +181,26 @@
             // Javascript is a dynamically typed language,which means that variable types are determined at runtime.
             // Variables can change their type during the execution of the program.
 
+        //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+        // Javascript wl smhr awsthwl variable ekk define weld blnn script ekm check krnw.
+        // (var type thiyen welwt.Eth apit value ek access krnn bh.)
+
+        // E kiynne adl variable ek hadil thiyenwd kiyl thmai check krnne.
+        // Ithn methn error ekk enne nh.
+
+                // console.log(num1);
+                // // Output- undefined
+                // console.log(num2);
+                // // Output- undefined
+                // var num1 = 10;
+                // var num2 = 20;
+
+        // Me widiht initialize wenn klin check krnn puluwn var types ew withrai.let,const wlt mek use krnn bh.
+
+        // Api me output ek blnne Adl web eke inspect gihin eke console kotasin.
+
+        //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
     </script>
 </body>
