update dom manipulation

--- a/07_dom_manipulation_part_01_js.html
+++ b/07_dom_manipulation_part_01_js.html
@@ -16,6 +16,15 @@
             Aut fuga laborum magnam, numquam sed sequi. Eveniet!
         </p>
 
+        <div id="subject1" class="mySubject" name="sub">Let's learn HTML</div>
+        <div id="subject2" class="mySubject" name="sub">Let's learn CSS</div>
+        <div id="subject3" class="mySubject" name="sub">Let's learn Javascript</div>
+
+        <h6>
+            <p>P1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, velit?</p>
+            <p>P2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, velit?</p>
+        </h6>
+
         <script src="dom_manipulation_part_01.js"></script>
     </body>
 </html>
