update string methods js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -9,7 +9,7 @@
 <!--        charAt() - String ekk api den index eke character ek define krnw.-->
 <!--        charCodeAt() - Api den index ekk character eke unicode ek arn denw.-->
 
-        <script src="dom_manipulation_part_01.js"></script>
+        <script src="string_methods.js"></script>
     </body>
 </html>
 
