--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -8,6 +8,9 @@
 
 <!--        charAt() - String ekk api den index eke character ek define krnw.-->
 <!--        charCodeAt() - Api den index ekk character eke unicode ek arn denw.-->
+<!--        concat() - We use this to concat. -->
+<!--        ex:- let starValue = str1.concat(str2); -->
+
 
         <script src="string_methods.js"></script>
     </body>
