add startsWith and endsWith js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -10,7 +10,8 @@
 <!--        charCodeAt() - Api den index ekk character eke unicode ek arn denw.-->
 <!--        concat() - We use this to concat. -->
 <!--        ex:- let starValue = str1.concat(str2); -->
-
+<!--        startsWith() - It checks if a string starts with a given string or character.-->
+<!--        endsWith() - It checks if a string ends with a given string or character.-->
 
         <script src="string_methods.js"></script>
     </body>
