add localeCompare js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -12,6 +12,7 @@
 <!--        ex:- let starValue = str1.concat(str2); -->
 <!--        startsWith() - It checks if a string starts with a given string or character.-->
 <!--        endsWith() - It checks if a string ends with a given string or character.-->
+<!--        localeCompare() - String values 2k conpare krnn mek use krnw."" athule thiyen string 2 equal nm 0 output krnw. Nththm -1 output krnw.-->
 
         <script src="string_methods.js"></script>
     </body>
