add replace() js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -13,6 +13,11 @@
 <!--        startsWith() - It checks if a string starts with a given string or character.-->
 <!--        endsWith() - It checks if a string ends with a given string or character.-->
 <!--        localeCompare() - String values 2k conpare krnn mek use krnw."" athule thiyen string 2 equal nm 0 output krnw. Nththm -1 output krnw.-->
+<!--        replace() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi plweni ek withrai wens wenne. -->
+<!--        replaceAll() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi adl serm wens wenw. -->
+
+
+
 
         <script src="string_methods.js"></script>
     </body>
