--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -17,9 +17,7 @@
 <!--        replaceAll() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi adl serm wens wenw. -->
 
 
-
-
-        <script src="string_methods.js"></script>
+<!--        <script src="string_methods.js"></script>-->
     </body>
 </html>
 
