add slice method js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -15,7 +15,8 @@
 <!--        localeCompare() - String values 2k conpare krnn mek use krnw."" athule thiyen string 2 equal nm 0 output krnw. Nththm -1 output krnw.-->
 <!--        replace() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi plweni ek withrai wens wenne. -->
 <!--        replaceAll() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi adl serm wens wenw. -->
-
+<!--        search() - String ekk athule awshy string ekk ho char ekk search krnn use krnw.-->
+<!--        slice() - Dila thiyen String eken kotsk apit arn denw.-->
 
 <!--        <script src="string_methods.js"></script>-->
     </body>
