add split method js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -17,6 +17,9 @@
 <!--        replaceAll() - String ekk athule thiyen character ekk wenuwt wen character ekk replace krnn use krnw.Mekedi adl serm wens wenw. -->
 <!--        search() - String ekk athule awshy string ekk ho char ekk search krnn use krnw.-->
 <!--        slice() - Dila thiyen String eken kotsk apit arn denw.-->
+<!--        split() - Dil thiyen string ekk thiyen content wen wenm arn array ekk athult dgnn mek use krnw. Mekedi content athrt enn on symbol ek bracket athult dnw.-->
+
+
 
 <!--        <script src="string_methods.js"></script>-->
     </body>
