add substring js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -18,10 +18,10 @@
 <!--        search() - String ekk athule awshy string ekk ho char ekk search krnn use krnw.-->
 <!--        slice() - Dila thiyen String eken kotsk apit arn denw.-->
 <!--        split() - Dil thiyen string ekk thiyen content wen wenm arn array ekk athult dgnn mek use krnw. Mekedi content athrt enn on symbol ek bracket athult dnw.-->
+<!--        substring() - Adl index eken psse thiyen String or chr ek arn denw.-->
 
 
-
-<!--        <script src="string_methods.js"></script>-->
+        <script src="string_methods.js"></script>
     </body>
 </html>
 
