add lower and uppercase js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -19,7 +19,8 @@
 <!--        slice() - Dila thiyen String eken kotsk apit arn denw.-->
 <!--        split() - Dil thiyen string ekk thiyen content wen wenm arn array ekk athult dgnn mek use krnw. Mekedi content athrt enn on symbol ek bracket athult dnw.-->
 <!--        substring() - Adl index eken psse thiyen String or chr ek arn denw.-->
-
+<!--        toUpperCase() - String ekk uppercase krnw -->
+<!--        toLowerCase() - String ekk lowercase krnw -->
 
         <script src="string_methods.js"></script>
     </body>
