add trim and length js

--- a/08_string_methods_js.html
+++ b/08_string_methods_js.html
@@ -21,6 +21,8 @@
 <!--        substring() - Adl index eken psse thiyen String or chr ek arn denw.-->
 <!--        toUpperCase() - String ekk uppercase krnw -->
 <!--        toLowerCase() - String ekk lowercase krnw -->
+<!--        length - get the String char length-->
+<!--        trim() - trim the string (Remove any trailing whitespace)(Spaces ain krnw String ek depththe)-->
 
         <script src="string_methods.js"></script>
     </body>
