logical operators js

--- a/08_operators_js.html
+++ b/08_operators_js.html
@@ -54,6 +54,22 @@
 
 
             // =============================================================================================================
+
+            // javascript wldi & dnne bitwise operators wl.
+            // javascript wldi && dnne logical operators wl.
+
+            // a = true
+            // b = true
+            // c = false
+
+            // a&&b ---> true
+            // a&&c ---> false
+            // a||b ---> true
+            // a||c ---> true
+
+            // !a ---> false
+            // !c ---> true
+
             // =============================================================================================================
             // =============================================================================================================
 
