unray operators js

--- a/08_operators_js.html
+++ b/08_operators_js.html
@@ -71,6 +71,32 @@
             // !c ---> true
 
             // =============================================================================================================
+
+            // Unary oprators wlt puluwn string widiht thiyen values number type ekt convert krnn.
+            //
+            // 3+3 = 6
+            // 3+"3" = "33"
+            // 3+ +"3" = 6 Unary plus
+            // 3+ -"1" = 2 Unary minus
+
+
+            // 3+3 = 6 Unary plus
+            // 3+"3" = "33"
+            // 3+ +"3" = 6
+
+            // let x = 10;
+
+            // prefix increment
+            // ++x -> 11
+            // prefix decrement
+            // --x -> 9
+
+            // post-prefix increment
+            // x++
+            // post-prefix decrement
+            // x--
+
+
             // =============================================================================================================
 
         </script>
