--- a/10_if_else_ternary_js.html
+++ b/10_if_else_ternary_js.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Javascript 09</title>
+        <title>Javascript 10</title>
     </head>
     <body>
         <script>
@@ -27,16 +27,16 @@
             // =============================================================================================================
 
 
-            // =============================================================================================================
+            let marks = 80;
+            console.log(
+                (marks >= 75) ? "A" :
+                (marks < 75 && marks >= 65) ? "B" :
+                (marks < 65 && marks >= 45) ? "C" :
+                (marks < 45 && marks >= 35) ? "S" : "Fail"
+            );
 
+            // console.log(`Grade: ${marks}`);
 
-            // =============================================================================================================
-
-
-            // =============================================================================================================
-
-
-            // =============================================================================================================
 
         </script>
     </body>
