update_loops_js

--- a/11_loops_js.html
+++ b/11_loops_js.html
@@ -20,8 +20,19 @@
 
             // =============================================================================================================
 
+            // let i  = 0;
+            // while (i<10) {
+            //     console.log(i+1);
+            //     i++;
+            // }
 
+            // =============================================================================================================
 
+            // let a = 1;
+            // do{
+            //     console.log(a);
+            //     ++a;
+            // }while(a<=10);
 
             // =============================================================================================================
 
