update_function js

--- a/12_functions_js.html
+++ b/12_functions_js.html
@@ -19,10 +19,17 @@
                 // // call the function
                 // myFunction();
 
+                function myFunction2(num1,num2) {
+                    let sum = num1 + num2;
+                    console.log(`sum: ${sum}`);
+                }
+
+                myFunction2(1,2);
+
             // =============================================================================================================
             //Named function
 
-            
+
 
 
             // =============================================================================================================
