--- a/12_functions_js.html
+++ b/12_functions_js.html
@@ -9,6 +9,7 @@
 
             // function = method
             // =============================================================================================================
+
             //Named function
 
                 // function myFunction() {
@@ -19,25 +20,53 @@
                 // // call the function
                 // myFunction();
 
-                function myFunction2(num1,num2) {
-                    let sum = num1 + num2;
-                    console.log(`sum: ${sum}`);
-                }
-
-                myFunction2(1,2);
-
-            // =============================================================================================================
-            //Named function
-
-
-
+                // function myFunction2(num1,num2) {
+                //     let sum = num1 + num2;
+                //     console.log(`sum: ${sum}`);
+                // }
+                //
+                // myFunction2(1,2);
 
             // =============================================================================================================
-            //Named function
+            //function expressions
 
+                // const myFunction = function (){
+                //     console.log("Function Expressions");
+                // }
+                //
+                // myFunction();
+
+                // ----------------------------------------------------------------------
+
+                // const myFunction = function (num1,num2) {
+                //     return num1 + num2;
+                // }
+                //
+                // let result = myFunction(1,3);
+                // console.log(result);
+                //
 
             // =============================================================================================================
-            //Named function
+            //Arrowed function
+
+                //Mew godk popular.Majority ek use krnw.Eth smhr frameworkswl wd nh.
+                // const myFunction =()=> {
+                //     console.log("Arrow Functions");
+                // }
+                //
+                // myFunction();
+
+                // ----------------------------------------------------------------------
+
+                // const myFunction = (num1,num2)=> {
+                //     return num1 + num2;
+                // }
+                //
+                // let result = myFunction(1,3);
+                // console.log(result);
+                //
+
+            // =============================================================================================================
 
 
             // =============================================================================================================
