update_function js

--- a/12_functions_js.html
+++ b/12_functions_js.html
@@ -48,8 +48,8 @@
 
             // =============================================================================================================
             //Arrowed function
-
                 //Mew godk popular.Majority ek use krnw.Eth smhr frameworkswl wd nh.
+
                 // const myFunction =()=> {
                 //     console.log("Arrow Functions");
                 // }
@@ -67,6 +67,13 @@
                 //
 
             // =============================================================================================================
+            //Function constructor (Function kiyn class eke controllerw new wlin call krl thamai mek hdnne )
+            // (Mek wdiy use wenne nh)
+
+                //     let myFunction = new Function("arg1", "arg2", "return arg1+arg2");
+                //     let sum = myFunction(1, 2);
+                //     console.log(sum);
+                //
 
 
             // =============================================================================================================
@@ -74,5 +81,6 @@
         </script>
     </body>
 </html>
+
 
 
